--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
@@ -6,15 +6,20 @@
   <string name="channel_name_timer">Ajastin</string>
   <string name="check_theme_app_install">Varmista, että Teemat -sovellus on asennettuna laitteellesi.</string>
   <string name="check_voice_assist_app_version">Päivitä Mi AI viimeisimpään versioon.</string>
+  <string name="clock_bg_button_setting_summary_common">Valitse Kello -sovelluksen taustaväri</string>
+  <string name="clock_bg_button_setting_summary_follow_sys">Mustaa käytetään taustavärinä aina, kun vaihdat Tummaan tilaan</string>
+  <string name="clock_bg_button_setting_title">Taustaväri</string>
   <string name="edit_alarm">Muokkaa hälytystä</string>
   <string name="module_download_cancel">Ei kiitos</string>
-  <string name="module_download_data_msg">Kellon täytyy yhdistää internetiin ladatakseen äänitiedostoja MIUI 10:n säähälytyksiä ja ympäristöääniä ajastimia varten. Mobiilidataasi käytetään 20 Mt verran. Hyväksytkö?</string>
-  <string name="module_download_data_msg_golbal">Kellon täytyy ladata äänitiedostoja MIUI 10:n säähälytyksiä ja ympäristöääniä ajastimia varten. Mobiilidataasi käytetään 20 Mt verran. Hyväksytkö?</string>
-  <string name="module_download_data_msg_replace">Päivitetty ääni älykkäille hälytyksille (≈20 Mt) on saatavilla. Yhdistetäänkö verkkoon ja ladataanko käyttäen mobiilidataa?</string>
+  <string name="module_download_data_msg">Kellon täytyy ladata äänitiedostoja MIUI:n älyhälytyksiä varten. Älyhälytykset sisältävät ääniominaisuuksia, jotka sallivat sen hetkiset säätiedot hälytyksiin. Mobiilidataasi vaaditaan noin 20 Mt tämän lataamiseksi. Ladataanko nyt?</string>
+  <string name="module_download_data_msg_golbal">Kellon täytyy ladata äänitiedostoja MIUI:n älyhälytyksiä varten. Mobiilidataasi vaaditaan noin 20 Mt tämän lataamiseksi. Ladataanko nyt?</string>
+  <string name="module_download_data_msg_replace">Päivitetty ääni MIUI:n älykkäille hälytyksille on saatavilla. Mobiilidataasi vaaditaan noin 20 Mt tämän lataamiseksi. Ladataanko nyt?</string>
+  <string name="module_download_data_msg_timer">Kellon täytyy ladata äänitiedostoja ympäristöääniajastimia varten. Mobiilidataasi vaaditaan noin 20 Mt tämän lataamiseksi. Ladataanko nyt?</string>
   <string name="module_download_fail">Ylimääräistä äänitiedostoa ei voitu ladata</string>
-  <string name="module_download_msg">Kellon täytyy yhdistää internetiin ladatakseen äänitiedostoja MIUI 10:n säähälytyksiä ja ympäristöääniä ajastimia varten. Hyväksytkö?</string>
-  <string name="module_download_msg_golbal">Kellon täytyy ladata äänitiedostoja MIUI 10:n säähälytyksiä ja ympäristöääniä ajastimia varten. Hyväksytkö?</string>
-  <string name="module_download_msg_replace">Päivitetty ääni älykkäille hälytyksille on saatavilla. Yhdistetäänkö verkkoon ja ladataanko nyt?</string>
+  <string name="module_download_msg">Kellon täytyy ladata äänitiedostoja MIUI:n älyhälytyksiä varten. Älyhälytykset sisältävät ääniominaisuuksia, jotka sallivat sen hetkisen säätietojen käyttämisen hälytyksissä. Ladataanko nyt?</string>
+  <string name="module_download_msg_golbal">Kellon täytyy ladata äänitiedostoja MIUI:n älyhälytyksiä varten. Ladataanko nyt?</string>
+  <string name="module_download_msg_replace">MIUI:n älyhälytyksien päivitetty ääni on saatavilla. Ladataanko nyt?</string>
+  <string name="module_download_msg_timer">Kellon täytyy ladata äänitiedostoja ympäristöääniajastimia varten. Ladataanko nyt?</string>
   <string name="module_download_no_network">Verkkoyhteyttä ei voitu muodostaa. Tarkista verkkoasetuksesi ja yritä uudelleen.</string>
   <string name="module_download_ok">Hyväksyn</string>
   <string name="module_download_success">Ylimääräinen äänitiedosto ladattiin onnistuneesti</string>
@@ -117,7 +122,12 @@
   <string name="dialog_message_agree">Hyväksyn</string>
   <string name="dialog_message_for_contact_permission">Jotta syntymäpäivähälytyksiä voidaan käyttää, Kello tarvitsee yhteystietojen käyttöoikeuden. Hyväksytö?</string>
   <string name="dialog_message_negative">En hyväksy</string>
-  <string name="dialog_message_not_remind">"Don't show again"</string>
+  <string name="dialog_message_not_remind">Älä näytä uudelleen</string>
+  <string name="dialog_privacy_content">Jotta saadaan olennaisia tietoja paikallisista juhlapyhistä, hälytyksien säätämisistä ja jotta voidaan tarjota yksilöllisiä palveluita, Kello tarvitsee päästää internetiin. Ennen Kellon käyttämistä sinun täytyy myös lukea ja hyväksyä meidän %1$s ja %2$s. Hyväksytkö?</string>
+  <string name="dialog_privacy_content_global">Jotta voidaan tarjota yksilöllisiä palveluita, Kello tarvitsee päästää internetiin. Ennen Kellon käyttämistä sinun täytyy myös lukea ja hyväksyä meidän %1$s ja %2$s. Hyväksytkö?</string>
+  <string name="dialog_privacy_content_news">Jotta voidaan tarjota yksilöllisiä palveluita ja tarjota aamu-uutiset hälytyksiisi, Kello tarvitsee päästää internetiin. Ennen Kellon käyttämistä sinun täytyy myös lukea ja hyväksyä meidän %1$s ja %2$s. Hyväksytkö?</string>
+  <string name="dialog_privacy_content_timer">Jotta voidaan ladata äänitiedostoja ympäristöääniajastimia varten ja jotta voidaan tarjota yksilöllisiä palveluita, Kello tarvitsee päästää internetiin. Ennen Kellon käyttämistä sinun täytyy myös lukea ja hyväksyä meidän %1$s ja %2$s. Hyväksytkö?</string>
+  <string name="dialog_privacy_content_timer_data">Jotta voidaan ladata äänitiedostoja ympäristöääniajastimia varten (≈20MB) ja jotta voidaan tarjota yksilöllisiä palveluita, Kello tarvitsee päästää internetiin. Ennen Kellon käyttämistä sinun täytyy myös lukea ja hyväksyä meidän %1$s ja %2$s. Käytät tällä hetkellä mobiilidataa. Hyväksytkö?</string>
   <string name="done">Valmis</string>
   <string name="dynamic_alarm_speech">Älykäs hälytys</string>
   <string name="edit_systemtime">Muokkaa järjestelmän aikaa</string>
@@ -129,6 +139,10 @@
   <string name="force_touch_enter_timer">Ajastin</string>
   <string name="full_wday_month_day_no_year">"EEEE d. MMMM'ta'"</string>
   <string name="go_back">Takaisin</string>
+  <string name="holiday_update">Juhlapyhistä on päivitys saatavilla</string>
+  <string name="holiday_update_fail">Ei voitu päivittää</string>
+  <string name="holiday_update_loading">Päivitetään…</string>
+  <string name="holiday_update_success">Kaikki kohteet ovat ajan tasalla</string>
   <string name="hour_unit">t +</string>
   <string name="install_weather_app_error">Sovelluksen lataaminen epäonnistui.</string>
   <string name="install_weather_app_loading">Odota hetki…</string>
@@ -154,7 +168,8 @@
   <string name="life_post_setting">Aamuraportti</string>
   <string name="life_post_setting_FBE_remind">Järjestelmärajoituksen vuoksi aamuraportin säätiedot eivät ehkä näy oikein uudelleenkäynnistyksen jälkeen</string>
   <string name="life_post_setting_close_title">Sulje aamuraportit</string>
-  <string name="life_post_setting_open_subtitle">Vastaanota säätiedot hälytyksen sulkemisen jälkeen jos kello on välillä 04:00-09:30</string>
+  <string name="life_post_setting_open_desc">Poista toistuvat hälytykset käytöstä klo 04.00 - 10.00 välisenä aikana kuunnellaksesi sääraportin</string>
+  <string name="life_post_setting_open_subtitle">Vastaanota säätiedot hälytyksen sulkemisen jälkeen jos kello on välillä 04.00 - 09.30</string>
   <string name="life_post_setting_open_title">Vastaanota aamuraportteja</string>
   <string name="life_post_setting_wake_up_list_title">Heräämisen historia</string>
   <string name="life_post_wake_up_acumu_day_title">Päivien laskenta</string>
@@ -185,6 +200,7 @@
   <string name="open_keep_screen">Näyttö pidetään päällä</string>
   <string name="other_category_title">Muu</string>
   <string name="pause">Tauko</string>
+  <string name="personal_recommend">Henkilökohtainen sisältösuositukset</string>
   <string name="privacy_policy">Tietosuojakäytäntö</string>
   <string name="remind_ringtone">Soittoääni</string>
   <string name="repeat_count">Toistokerrat</string>
@@ -204,7 +220,7 @@
   <string name="shutdown_alarm_enable_summary">Hälytys soi, jos se on asetettu vähintään 5 minuuttia laitteesi sammuttamisen jälkeen</string>
   <string name="shutdown_alarm_title">Sammutetun laitteen hälytys</string>
   <string name="silent_alarm_summary">Äänetön</string>
-  <string name="skip_alarm_once_hint">Pois käytöstä kerran: %s</string>
+  <string name="skip_alarm_once_hint">Poista käytöstä kerran: %s</string>
   <string name="slider_text">Sammuta pyyhkäisemällä ylös</string>
   <string name="snooze_confirm_cancel">Hylkää hälytys</string>
   <string name="snooze_duration">Torkku</string>
@@ -213,13 +229,6 @@
   <string name="star_wy_alarm_speech">Tapaa Roy Wang</string>
   <string name="start">Aloita</string>
   <string name="start_up">Aloita</string>
-  <string name="stat_repeat_everyday">每天</string>
-  <string name="stat_repeat_legal_off_day">法定节假日</string>
-  <string name="stat_repeat_legal_workday">法定工作日</string>
-  <string name="stat_repeat_none">一次性</string>
-  <string name="stat_repeat_self_define">自定义</string>
-  <string name="stat_repeat_weekdays">周一至周五</string>
-  <string name="stat_repeat_weekends">周末</string>
   <string name="stopwatch_lap_empty_text">Ei kierroksia</string>
   <string name="stopwatch_title">Sekuntikello</string>
   <string name="system_time_setting">Asetukset</string>
@@ -254,6 +263,7 @@
   <string name="turn_off_this_repeat_alarm">Poista käytöstä kokonaan</string>
   <string name="upcoming_alarm">%s Tuleva hälytys</string>
   <string name="upcoming_alarm_hint">Voit sulkea tämän hälytyksen ennakkoon</string>
+  <string name="user_agreement">Käyttöehdot</string>
   <string name="vibrate_pref_summary">Värise, kun hälytys soi</string>
   <string name="vibrate_when_ringing">Värise, kun soi</string>
   <string name="volume_button_setting_summary">Aseta äänenvoimakkuuspainikkeiden toiminnot hälytyksen aikana</string>
