--- a/Finnish/main/framework-ext-res.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/framework-ext-res.apk/res/values-fi-rFI/strings.xml
@@ -97,6 +97,18 @@
   <string name="perm_send_push_lab">Lähetä push viesti</string>
   <string name="permdesc_manageLocationPolicy">Salli sovelluksen muuttaa sijaintiin koskevia käyttöoikeuksia ja määrittää sovelluskohtaisia sääntöjä.</string>
   <string name="permlab_manageLocationPolicy">Sijaintitietojen käyttö</string>
+  <string name="popup_camera_calibrate_failed">Ei voitu kalibroida. Vie laitteesi lähimpään Mi Homeen, jotta ongelma voidaan tutkia.</string>
+  <string name="popup_camera_calibrate_now">Kalibroi</string>
+  <string name="popup_camera_calibrate_success">Kalibroitiin onnistuneesti. Voit avata etukameran nyt.</string>
+  <string name="popup_camera_front_failed">Etukameraa ei voitu avata. Yritä uudelleen</string>
+  <string name="popup_camera_front_falied_times">Etukameraa ei voitu avata useaan kertaan. Vie laitteesi lähimpään Mi Homeen, jotta ongelma voidaan tutkia.</string>
+  <string name="popup_camera_front_when_use">Etukamera on kiireinen tällä hetkellä. Avataanko siitä huolimatta?</string>
+  <string name="popup_camera_popup_falied_times_calibrate">Etukameraa ei voitu avata useaan kertaan. Yritä kameran kalibrointia.</string>
+  <string name="popup_camera_sure">Selvä</string>
+  <string name="popup_camera_sure_wait">Selvä (%d s)</string>
+  <string name="popup_camera_takeback_falied_times_calibrate">Etukameraa ei voitu sulkea useaan kertaan. Yritä kameran kalibrointia.</string>
+  <string name="popup_camera_tip">Huomio</string>
+  <string name="popup_camera_using_camera_background">%s käyttää etukameraa</string>
   <string name="reboot_confirm_title">Käynnistetäänkö laite uudelleen nyt?</string>
   <string name="reboot_info_auto_boot">Laite on ajastettu käynnistymään klo %s</string>
   <string name="reboot_info_shutdown_alarm">Seuraava hälytys %s</string>
@@ -171,10 +183,12 @@
   <string name="status_bar_toggle_vibrate">Värinä</string>
   <string name="status_bar_toggle_wifi">Wi-Fi</string>
   <string name="status_bar_toggle_wifi_ap">Hotspot</string>
-  <string name="subinfo_default_name">SIM-kortti %d</string>
+  <string name="stop_operate_camera_frequently">Näyttää siltä, että vaihdat kameroiden välillä liian usein.</string>
+  <string name="subinfo_default_name">SIM %d</string>
   <string name="switch_brand_desc_tv">Tietoturvapalvelut tarjoaa Spaces Mobile</string>
   <string name="switch_desc_tv">Kaksi tilaa. Yksi laite.</string>
   <string name="switching_tv">Vaihdetaan…</string>
+  <string name="takeback_camera_front_failed">Etukameraa ei voitu sulkea. Yritä uudelleen.</string>
   <string name="talk_back_water_mark_string1">TalkBack on käytössä</string>
   <string name="talk_back_water_mark_string2">Paina ja pidä pohjassa \"Äänenvoimakkuus+\" ja \"Äänenvoimakkuus-\" kolmen sekunnin ajan poistaaksesi sen käytöstä</string>
   <string name="total">Älä häiritse</string>
