--- a/Finnish/main/MiuiHome.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiHome.apk/res/values-fi-rFI/strings.xml
@@ -203,6 +203,7 @@
   <string name="is_system_wallpaper_message">Järjestelmän resursseja ei voi poistaa</string>
   <string name="launcher_auto_fill_empty_title">Täytä tyhjät ruudukot</string>
   <string name="launcher_not_exist">Tapahtui virhe. Mene takaisin Aloitusnäytölle ja yritä uudelleen.</string>
+  <string name="launcher_sliding_up_gesture">Avaa hakutoiminto pyyhkäisemällä Aloitusnäytöllä ylöspäin</string>
   <string name="launcher_title">Aloitusnäyttö &amp; Viimeaikaiset</string>
   <string name="like">Lisää suosikkeihin</string>
   <string name="liked">Lisätty suosikkeihin</string>
