--- a/Finnish/main/CloudBackup.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CloudBackup.apk/res/values-fi-rFI/strings.xml
@@ -156,7 +156,7 @@ Huomio: Asennettujen sovelluksien datatietoja ei varmuuskopioida Mi Pilveen. Kä
   <string name="provision_error_connect_msg">Testaa verkko ja yritä uudelleen. Varmuuskopiot ei ole käytettävissä, kun laitteesi on offline-tilassa.</string>
   <string name="provision_error_connect_title">Ei voi yhdistää</string>
   <string name="provision_restore_data">Palautetaan kohteita</string>
-  <string name="provision_restore_item_backup_name_with_size">%1$s %2$s</st
+  <string name="provision_restore_item_backup_name_with_size">%1$s %2$s</string>
   <string name="query_restore_description">Palauta Aloitusnäytön sovellukset ja asetukset käyttäen tätä varmuuskopiota. Tämä korvaa jo olemassaolevien sovelluksien kaksoiskappaleiden sovellustiedot. Sovellukset, jotka eivät sisälly varmuuskopioon, siirretään viimeiselle Aloitusnäytölle.</string>
   <string name="query_restore_summary">Tälle laitteelle löydettiin Mi Pilvi varmuuskopio. Palautetaanko Aloitusnäytön sovellukset ja asetukset vai käytetäänkö laitetta uutena laitteena ja poistetaanko edellinen Mi Pilvi varmuuskopiot?</string>
   <string name="recover_from_micloud">Palauta Mi Pilvi varmuuskopio</string>
